# v3.0_REPOZICIJA

./: .gitignore  CMakeLists.txt  README.md  data_handling.cpp  data_handling.h  generated_students.txt  kursiokai.txt  rezultatai.cpp  rezultatai.h  run.bat  studentas.cpp  studentas.h  test.cpp  v.pradinee.cpp  v.pradinee.sln  v.pradinee.vcxproj  v.pradinee.vcxproj.filters
SetUp/: ProgramInstallSetup.msi
headers/: data_handling.h  rezultatai.h  studentas.h
html/: annotated.html  class_studentas-members.html  class_studentas.html  class_studentas.js  class_zmogus-members.html  class_zmogus.html  class_zmogus.js  classes.html  data__handling_8cpp.html  data__handling_8cpp.js  data__handling_8h.html  data__handling_8h.js  data__handling_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.html  dir_7f57b1e41c5acd0e859ae5f3a2b075a9.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  rezultatai_8cpp.html  rezultatai_8cpp.js  rezultatai_8h.html  rezultatai_8h.js  rezultatai_8h_source.html  studentas_8cpp.html  (+6 more)
projektas2/: CMakeLists.txt  data_handling.cpp  data_handling.h  kietiakiai.txt.txt  projektas2.cpp  projektas2.sln  projektas2.vcxproj  projektas2.vcxproj.filters  rezultatai.cpp  rezultatai.h  run.bat  studentai_1000.txt  studentas.cpp  studentas.h  vargsiai.txt.txt
(+31 files in other folders)
